--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
                         <div class="ml-3">
                             <h3 class="text-sm font-medium text-green-800">Predicted Selling Price</h3>
                             <div class="mt-2 text-sm text-green-700">
-                                <p class="text-2xl font-bold">${{ prediction }}</p>
+                                <p class="text-2xl font-bold">₹{{ prediction }}</p>
                             </div>
                         </div>
                     </div>
@@ -70,7 +70,7 @@
                         <div class="flex flex-col space-y-2 mb-2">
                             <div class="flex items-center">
                                 <span class="font-medium mr-2">Mean Absolute Error (MAE):</span> 
-                                <span>${{ mae }}</span>
+                                <span>₹{{ mae }}</span>
                             </div>
                             <div class="flex items-center">
                                 <span class="font-medium mr-2">Relative MAE:</span>
@@ -88,7 +88,7 @@
                         
                         <div class="mt-4 flex flex-col space-y-2">
                             <p class="font-medium">Sources:</p>
-                            <a href="https://github.com/username/car-dataset" 
+                            <a href="https://github.com/YBIFoundation/Dataset/blob/main/Car%20Selling%20Price.csv" 
                                class="text-indigo-600 hover:text-indigo-800 transition duration-300"
                                target="_blank">
                                 <div class="flex items-center">
@@ -98,7 +98,7 @@
                                     Dataset Source on GitHub
                                 </div>
                             </a>
-                            <a href="https://github.com/username/car-price-notebook" 
+                            <a href="https://www.kaggle.com/code/khoiruliman/prediksi-harga-jual-mobil/" 
                                class="text-indigo-600 hover:text-indigo-800 transition duration-300"
                                target="_blank">
                                 <div class="flex items-center">
